I have no idea at this point

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ shadowJar {
     archivesBaseName = "BotAPI"
     archiveClassifier = ''
     archiveVersion = ''
-    destinationDirectory = file("$rootDir/output")
+    destinationDirectory = file("$rootDir/.m2/repository/me/kokodevs/BotAPI/1.0")
 }
 
 publishing {
