Changed a lot of jitpack things

--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,12 @@ afterEvaluate {
     publishing {
         publications {
             // Creates a Maven publication called "release".
-            release(MavenPublication) {
+            mavenJava(MavenPublication) {
                 groupId = 'com.github.KokoDevs'
                 artifactId = 'BotAPI'
                 version = '1.0'
+
+                from components.java
             }
         }
     }
