--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
 rootProject.name = 'BotAPI'
 
+dependencyResolutionManagement {
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+}
